--- a/package.json
+++ b/package.json
@@ -5,7 +5,12 @@
   "scripts": {
     "compile": "hardhat compile",
     "test": "hardhat test",
-    "deploy": "hardhat run scripts/deploy.ts"
+    "test:coverage": "hardhat coverage",
+    "deploy:local": "hardhat run scripts/deploy.ts",
+    "deploy:amoy": "hardhat run scripts/deploy.ts --network polygonAmoy",
+    "deploy:polygon": "hardhat run scripts/deploy.ts --network polygon",
+    "verify:amoy": "HARDHAT_NETWORK=polygonAmoy hardhat run scripts/verify.ts",
+    "verify:polygon": "HARDHAT_NETWORK=polygon hardhat run scripts/verify.ts"
   },
   "license": "MIT",
   "devDependencies": {
