--- a/relayer/package.json
+++ b/relayer/package.json
@@ -9,6 +9,10 @@
         "dev": "ts-node src/index.ts"
     },
     "dependencies": {
+        "@ton/core": "^0.62.0",
+        "@ton/crypto": "^3.3.0",
+        "@ton/ton": "^16.1.0",
+        "buffer": "^6.0.3",
         "dotenv": "^16.4.0",
         "ethers": "^6.4.0"
     },
